--- a/src/main/resources/templates/addCar.html
+++ b/src/main/resources/templates/addCar.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </lang="en">
 
 <head>
@@ -7,23 +14,27 @@
     <title>Add new car</title>
 </head>
 <body>
-<form action="#" th:action="@{/addCar}" th:object="${car}" method="post">
-    <label for="brand">Brand</label>
-    <input type="text" th:field="*{brand}" id="email" placeholder="Brand">
-    <span th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></span>
+<div class="container my-2">
+    <div class="card">
+        <div class="card-body">
+            <div class="col-md-10">
+            <form action="#" th:action="@{/addCar}" th:object="${car}" method="post">
+                <label for="brand">Brand</label>
+                <input type="text" th:field="*{brand}" id="brand" placeholder="Brand">
+                <span th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></span>
 
-    <label for="model">Model</label>
-    <input type="text" th:field="*{model}" id="model" placeholder="Model">
-    <span th:if="${#fields.hasErrors('model')}" th:errors="*{model}"></span>
+                <label for="model">Model</label>
+                <input type="text" th:field="*{model}" id="model" placeholder="Model">
+                <span th:if="${#fields.hasErrors('model')}" th:errors="*{model}"></span>
 
 
-    <label for="status">Status</label>
-    <!--    <input type="text" th:field="*{status}" id="status" placeholder="Status">-->
-    <!--    <span th:if="${#fields.hasErrors('status')}" th:errors="*{status}"></span>-->
-    <select name="status" th:field="*{status}">
-            <option th:each="status : ${T(org.example.domain.CarStatus).values()}"
-                    th:value="${status}" th:text="${status}"></option>
-    </select>
-        <input type="submit" value="Add Car">
+                <label for="status">Status</label>
+                <!--    <input type="text" th:field="*{status}" id="status" placeholder="Status">-->
+                <!--    <span th:if="${#fields.hasErrors('status')}" th:errors="*{status}"></span>-->
+                <select name="status" th:field="*{status}">
+                    <option th:each="status : ${T(org.example.domain.CarStatus).values()}"
+                            th:value="${status}" th:text="${status}"></option>
+                </select>
+                <input type="submit" value="Add Car">
 </body>
 </html>
