--- a/src/main/resources/templates/editCar.html
+++ b/src/main/resources/templates/editCar.html
@@ -3,25 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit car</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body>
-<form action="#" th:action="@{/edit/{id}(id=${car.id})}" th:object="${car}" method="post">
-    <label for="brand">Brand</label>
-    <input type="text" th:field="*{brand}" id="email" placeholder="Brand">
-    <span th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></span>
+<div class="container my-2">
+    <div class="card">
+        <div class="card-body">
+            <div class="col-md-10">
+                <form action="#" th:action="@{/edit/{id}(id=${car.id})}" th:object="${car}" method="post">
+                    <label for="brand">Brand</label>
+                    <input type="text" th:field="*{brand}" id="email" placeholder="Brand">
+                    <span th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></span>
 
-    <label for="model">Model</label>
-    <input type="text" th:field="*{model}" id="model" placeholder="Model">
-    <span th:if="${#fields.hasErrors('model')}" th:errors="*{model}"></span>
-    <input type="submit" value="Edit Car">
+                    <label for="model">Model</label>
+                    <input type="text" th:field="*{model}" id="model" placeholder="Model">
+                    <span th:if="${#fields.hasErrors('model')}" th:errors="*{model}"></span>
+                    <input type="submit" value="Edit Car">
 
-<!--    <label for="status">Status</label>-->
-<!--&lt;!&ndash;    <input type="text" th:field="*{status}" id="status" placeholder="Status">&ndash;&gt;-->
-<!--&lt;!&ndash;    <span th:if="${#fields.hasErrors('status')}" th:errors="*{status}"></span>&ndash;&gt;-->
-<!--    <select name="status" th:field="*{status}">-->
-<!--        <option th:each="status : ${T(com.frontbackend.thymeleaf.enums.model.CarStatus).values()}"-->
-<!--                th:value="${status}" th:text="${status}"></option>-->
-<!--    </select>-->
-<!--    <input type="submit" value="Edit Car">-->
+                    <!--    <label for="status">Status</label>-->
+                    <!--&lt;!&ndash;    <input type="text" th:field="*{status}" id="status" placeholder="Status">&ndash;&gt;-->
+                    <!--&lt;!&ndash;    <span th:if="${#fields.hasErrors('status')}" th:errors="*{status}"></span>&ndash;&gt;-->
+                    <!--    <select name="status" th:field="*{status}">-->
+                    <!--        <option th:each="status : ${T(com.frontbackend.thymeleaf.enums.model.CarStatus).values()}"-->
+                    <!--                th:value="${status}" th:text="${status}"></option>-->
+                    <!--    </select>-->
+                    <!--    <input type="submit" value="Edit Car">-->
 </body>
 </html>
