--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,52 +4,58 @@
 <!--</xmlns="http://www.w3.org/1999/xhtml>-->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <title>hello world</title>
 </head>
 <body>
-<h1>Welcome to the car rental service!</h1>
-<p class="my-5">
-    <a href="/addCar" class="btn btn-primary"><i
-            class="fas fa-user-plus ml-2"> Add new car</i></a>
-</p>
+<div class="container my-2">
+    <div class="card">
+        <div class="card-body">
+            <h1>Welcome to the car rental service!</h1>
+            <div th:switch="${cars}" class="container my-5">
+                <p class="my-5">
+                    <a href="/addCar" class="btn btn-primary"><i
+                            class="fas fa-car ml-2"> Add Car</i></a>
+                </p>
+                <p class="my-5">
+                    <a href="/addUser" class="btn btn-primary"><i
+                            class="fas fa-user-plus ml-2"> Add User</i></a>
+                </p>
 
-    <h2>List of the cars</h2>
-<div th:switch="${cars}">
-    <h2 th:case="null">No cars yet!</h2>
-    <div th:case="*">
-<table>
-    <tr>
-        <th>Brand</th>
-        <th>Model</th>
-        <th>Status</th>
-        <th>Edit</th>
-        <th>Delete</th>
-        <th>Return</th>
+                <p class="my-5">
+                    <a href="/showUsers" class="btn btn-primary"><i
+                            class="fas fa-users ml-2"> User List</i></a>
+                </p>
+                <div class="col-md-10">
+                    <h2 th:case="null">No Cars yet!</h2>
+                    <div th:case="*">
+            <h2>List of the cars</h2>
+            <!--<div th:switch="${cars}">-->
+            <!--    <h2 th:case="null">No cars yet!</h2>-->
+            <!--    <div th:case="*">-->
+            <table class="table table-striped table-responsive-md">
+                <tr>
+                    <th>Brand</th>
+                    <th>Model</th>
+                    <th>Status</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                    <th>Return</th>
 
-    </tr>
-    <tr th:each="car : ${cars}">
-        <td th:text="${car.brand}"></td>
-        <td th:text="${car.model}"></td>
-        <td th:text="${car.status}"></td>
-        <td><a th:href="@{/edit/{id}(id=${car.id})}">Edit</a></td>
-        <td><a th:href="@{/delete/{id}(id=${car.id})}">Delete</a></td>
-        <td><a th:href="@{/rent/{id}(id=${car.id})}">Return</a></td>
-    </tr>
-    <table>
-
-
-<!--        <form action="#" th:action="@{/addCar}" th:object="${car}" method="post">-->
-<!--            <label for="brand">Brand</label>-->
-<!--            <input type="text" th:field="*{brand}" id="email" placeholder="Brand">-->
-<!--            <span th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></span>-->
-
-<!--            <label for="model">Model</label>-->
-<!--            <input type="text" th:field="*{model}" id="model" placeholder="Model">-->
-<!--            <span th:if="${#fields.hasErrors('model')}" th:errors="*{model}"></span>-->
-<!--            <input type="submit" value="Add Car">-->
-<!--</div>-->
-<!--    <p><a href="/signup">Add a new user</a></p>-->
-<!--</div>-->
+                </tr>
+                <tr th:each="car : ${cars}">
+                    <td th:text="${car.brand}"></td>
+                    <td th:text="${car.model}"></td>
+                    <td th:text="${car.status}"></td>
+                    <td><a th:href="@{/edit/{id}(id=${car.id})}"class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
+                    <td><a th:href="@{/delete/{id}(id=${car.id})}"class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+                    <td><a th:href="@{/rent/{id}(id=${car.id})}"class="btn btn-primary"><i class="fas fa-car ml-2"></i></a></td>
+                </tr>
 
 </body>
 </html>
